src/client/components/todo/elems/item/styles.css
.todoItem {
  position: relative;

  border-bottom: 1px solid #ededed;
}

.todoItemIsCompleted,
.todoItemIsEditing,
.todoItemIsHidden {
  composes: todoItem;
}

.todoItemIsHidden {
  display: none;
}

.todoItemIsEditing {
  border-bottom: none;
}

.todoItemIsEditing .view {
  display: none;
}

.edit {
  display: none;
}

.todoItemIsEditing .edit {
  display: block;
}

.label {
  font-size: 24px;
  line-height: 29px;

  display: block;

  margin-left: 45px;
  padding: 15px 60px 15px 15px;

  white-space: pre;

  transition: color 0.4s;
}

.todoItemIsCompleted .label {
  text-decoration: line-through;

  color: #d9d9d9;
}

.deleteButton {
  font-family: inherit;
  font-size: 30px;
  font-weight: inherit;

  position: absolute;
  top: 0;
  right: 10px;
  bottom: 0;

  display: none;

  width: 40px;
  height: 40px;
  margin: auto 0 11px;
  padding: 0;

  vertical-align: baseline;

  color: #cc9a9a;
  border: none;
  outline: none;
  background: transparent;
  transition: color 0.2s ease-out;
}

.deleteButton::after {
  content: '×';
}

.deleteButton:hover {
  color: #af5b5e;
}

.todoItem:hover .deleteButton {
  display: block;
}

